--- a/src/components/Jumbotron/Jumbotron.scss
+++ b/src/components/Jumbotron/Jumbotron.scss
@@ -1,7 +1,32 @@
 .jumbotron {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     height: 100vh;
+    width: 100%;
+
+    .centerize {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        .social-media {
+            display: flex;
+            justify-content: space-evenly;
+
+            .btn {
+                text-decoration: none;
+                color: #000000;
+                font-weight: bold;
+                border: 2px solid #0d47a1;
+                border-radius: 12px;
+                padding: 2px 8px;
+                margin: 0 5px;
+                transition: 0.5s;
+
+                &:hover {
+                    color: #ffffff;
+                    background-color: #0d47a1;
+                }
+            }
+        }
+    }
 }
