--- a/app/style.scss
+++ b/app/style.scss
@@ -1,23 +1,29 @@
 body {
-  background-color: #f5f5f5;
-  -webkit-font-smoothing: antialiased;
-  font-family: monospace;
-  .container {
-    text-align: center;
-    margin: 1em;
-  }
-  .button {
-    border: 1px solid #000;
-    padding: 0.5em;
-    text-decoration: none;
-    color: #000;
-  }
-  .mug {
-    border-radius: 8em;
-  }
-  .experience,
-  .education {
-    display: flex;
-    flex-direction: column;
-  }
+    margin: 0;
+    padding: 0;
+    background-color: #f5f5f5;
+    -webkit-font-smoothing: antialiased;
+    font-family: monospace;
+
+    .container {
+        text-align: center;
+        margin: 1em;
+    }
+
+    .button {
+        border: 1px solid #000;
+        padding: 0.5em;
+        text-decoration: none;
+        color: #000;
+    }
+
+    .mug {
+        border-radius: 8em;
+    }
+
+    .experience,
+    .education {
+        display: flex;
+        flex-direction: column;
+    }
 }
